--- a/create_debian_package_config.json
+++ b/create_debian_package_config.json
@@ -8,24 +8,24 @@
   "postinst": "src/github.com/bborbe/version/postinst",
   "files": [
 		{
-			"source": "bin/version_equal",
-			"target": "/opt/version/bin/version_equal"
-		},
-		{
-			"source": "bin/version_less",
-			"target": "/opt/version/bin/version_less"
+			"source": "bin/version_eq",
+			"target": "/opt/version/bin/version_eq"
 		},
 		{
 			"source": "bin/version_lt",
 			"target": "/opt/version/bin/version_lt"
 		},
 		{
+			"source": "bin/version_le",
+			"target": "/opt/version/bin/version_le"
+		},
+		{
 			"source": "bin/version_gt",
 			"target": "/opt/version/bin/version_gt"
 		},
 		{
-			"source": "bin/version_greater",
-			"target": "/opt/version/bin/version_greater"
+			"source": "bin/version_ge",
+			"target": "/opt/version/bin/version_ge"
 		}
   ]
 }
